--- a/public/CaseStudies/dischem.html
+++ b/public/CaseStudies/dischem.html
@@ -29,8 +29,8 @@
         <div class="container">
             <div class="col-md-8 offset-md-2">
                 <div class="nbr-page-content text-center">
-                    <h2>Dis-Chem Pharmacy.</h2>
-                    <div class="dark"> <span><b>Mobile App |  2017</b></span> </div>
+                    <h2 style="font-weight: 500;">Dis-Chem Pharmacy.</h2>
+                    <!-- <div class="dark"> <span><b>Mobile App |  2017</b></span> </div> -->
                 </div>
             </div>
         </div>
@@ -77,10 +77,10 @@
                             </div>
                             <div class="col-md-6">
                                 <h4>Details</h4>
-                                <p><span class="dark"> <b>Client  </b> </span>&nbsp; Dis-Chem Pharmacy.
-                                    <br><span class="dark"><b>Services</b> </span>&nbsp; UI, UX, App design, Development
-                                    <br><span class="dark"><b>Category </b> </span> &nbsp;App Design 
-                                    <br><span class="dark"><b>Year</b> </span> &nbsp;2017 </p>
+                                <p><span class="dark"> <b style="color: #a6471b">Client  </b> </span>&nbsp; Dis-Chem Pharmacy.
+                                    <br><span class="dark"><b style="color: #a6471b">Services</b> </span>&nbsp; UI, UX, App design, Development
+                                    <br><span class="dark"><b style="color: #a6471b">Category </b> </span> &nbsp;App Design 
+                                    <br><span class="dark"><b style="color: #a6471b">Year</b> </span> &nbsp;2017 </p>
                             </div>
                         </div>
                     </div>
