--- a/public/CaseStudies/African Bank.html
+++ b/public/CaseStudies/African Bank.html
@@ -29,8 +29,8 @@
         <div class="container">
             <div class="col-md-8 offset-md-2">
                 <div class="nbr-page-content text-center">
-                    <h2>African Bank.</h2>
-                    <div class="dark"> <span><b>Website |  2016</b></span> </div>
+                    <h2 style="font-weight: 500;">African Bank.</h2>
+                    <!-- <div class="dark"> <span><b>Website |  2016</b></span> </div> -->
                 </div>
             </div>
         </div>
@@ -97,10 +97,10 @@
               <div class="row">
                             <div class="col-md-12">
                                 <h4>Details</h4>
-                                <p><span class="dark"> <b>Client  </b> </span> &nbsp;African Bank.
-                                    <br><span class="dark"><b>Services</b> </span> &nbsp;UI, UX, Web design
-                                    <br><span class="dark"><b>Category </b> </span> &nbsp;Web &amp; Mobile Design 
-                                    <br><span class="dark"><b>Year</b> </span> &nbsp;2016 </p>
+                                <p><span class="dark"> <b style="color: #a6471b">Client  </b> </span> &nbsp;African Bank.
+                                    <br><span class="dark"><b style="color: #a6471b">Services</b> </span> &nbsp;UI, UX, Web design
+                                    <br><span class="dark"><b style="color: #a6471b">Category </b> </span> &nbsp;Web &amp; Mobile Design 
+                                    <br><span class="dark"><b style="color: #a6471b">Year</b> </span> &nbsp;2016 </p>
                             </div>
                         </div>
                     </div>
