--- a/public/CaseStudies/ValuticoWeb.html
+++ b/public/CaseStudies/ValuticoWeb.html
@@ -29,8 +29,8 @@
         <div class="container">
             <div class="col-md-8 offset-md-2">
                 <div class="nbr-page-content text-center">
-                    <h2>Valutico Marketing Website</h2>
-                    <div class="dark"> <span><b>Website |  2023</b></span> </div>
+                    <h2 style="font-weight: 500;">Valutico Marketing Website</h2>
+                    <!-- <div class="dark"> <span style="color: #a6471b"><b>Website |  2023</b></span> </div> -->
                 </div>
             </div>
         </div>
@@ -145,10 +145,10 @@
                     <div class="nbr-blog-post"> 
                         <div class="nbr-blog-content">
                           <h4>Details</h4>
-                                <p><span class="dark"> <b>Client  </b> </span>&nbsp; Valutico.
-                                    <br><span class="dark"><b>Services</b> </span> &nbsp;UI, UX, Web design
-                                    <br><span class="dark"><b>Category </b> </span> &nbsp;Web &amp; Marketing Design 
-                                   <br><span class="dark"><b>Year</b> </span>&nbsp; 2023 </p>
+                                <p><span class="dark"> <b style="color: #a6471b">Client  </b> </span>&nbsp; Valutico.
+                                    <br><span class="dark"><b style="color: #a6471b">Services</b> </span> &nbsp;UI, UX, Web design
+                                    <br><span class="dark"><b style="color: #a6471b">Category </b> </span> &nbsp;Web &amp; Marketing Design 
+                                   <br><span class="dark"><b style="color: #a6471b">Year</b> </span>&nbsp; 2023 </p>
                          
                         </div>
                     </div>
