Archive Projects Back Button

--- a/public/CaseStudies/Adverity Design System.html
+++ b/public/CaseStudies/Adverity Design System.html
@@ -676,7 +676,12 @@ blockquote {
 	background-image: url("data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%2216%22%20height%3D%2216%22%20viewBox%3D%220%200%2016%2016%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%0A%3Crect%20x%3D%220.75%22%20y%3D%220.75%22%20width%3D%2214.5%22%20height%3D%2214.5%22%20fill%3D%22white%22%20stroke%3D%22%2336352F%22%20stroke-width%3D%221.5%22%2F%3E%0A%3C%2Fsvg%3E");
 }
 	
-</style></head><body><article id="1e026819-e87e-4725-b2c8-d5bd317195b5" class="page sans"><header><img class="page-cover-image" src="Adverity%20Design%20System%201e026819e87e4725b2c8d5bd317195b5/Frame_1.png" style="object-position:center 25.2%"/><div class="page-header-icon page-header-icon-with-cover"><img class="icon" src="Adverity%20Design%20System%201e026819e87e4725b2c8d5bd317195b5/Frame_3.png"/></div><h1 class="page-title">Adverity Design System</h1></header><div class="page-body"><p id="eb22cf23-3e3b-4e78-ad9c-ca50f90b8cd0" class="block-color-gray">The Adverity Design System “Frog” is enabling, guiding and supporting product development to increase productivity and satisfaction while raising the quality and consistency of the platform.
+</style></head><body>
+    <a style="position: absolute; top: 32px; left: 32px; z-index: 10; text-decoration: none" href="/projects/archive">
+        <img alt="Back" loading="lazy" width="40" height="40" decoding="async" data-nimg="1" src="/images/icons/home.svg" style="color: transparent;">
+    </a>
+
+	<article id="1e026819-e87e-4725-b2c8-d5bd317195b5" class="page sans"><header><img class="page-cover-image" src="Adverity%20Design%20System%201e026819e87e4725b2c8d5bd317195b5/Frame_1.png" style="object-position:center 25.2%"/><div class="page-header-icon page-header-icon-with-cover"><img class="icon" src="Adverity%20Design%20System%201e026819e87e4725b2c8d5bd317195b5/Frame_3.png"/></div><h1 class="page-title">Adverity Design System</h1></header><div class="page-body"><p id="eb22cf23-3e3b-4e78-ad9c-ca50f90b8cd0" class="block-color-gray">The Adverity Design System “Frog” is enabling, guiding and supporting product development to increase productivity and satisfaction while raising the quality and consistency of the platform.
 </p><hr id="a7acc0d7-d97f-4d8f-97f7-de325d26c49c"/><p id="b8b67eec-b518-44bd-9344-d1c61cf61026" class="">
 </p><p id="a3b896b9-ea9c-4c6e-a5d0-924f44f4781b" class="">
 </p><h3 id="907a39a2-59b3-4905-952d-7cc00c70aa3f" class="block-color-teal">Adverity 2021 / 2022</h3><p id="56366914-099d-4e17-92a3-c5c16d6aeb03" class="block-color-gray">The Frog Design System is an ongoing project.</p><p id="c01ba7e7-36af-4e8e-a6ce-1dfcef8e7fa8" class="">
