--- a/public/CaseStudies/Nedbank Product Design.html
+++ b/public/CaseStudies/Nedbank Product Design.html
@@ -676,7 +676,12 @@ blockquote {
 	background-image: url("data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%2216%22%20height%3D%2216%22%20viewBox%3D%220%200%2016%2016%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%0A%3Crect%20x%3D%220.75%22%20y%3D%220.75%22%20width%3D%2214.5%22%20height%3D%2214.5%22%20fill%3D%22white%22%20stroke%3D%22%2336352F%22%20stroke-width%3D%221.5%22%2F%3E%0A%3C%2Fsvg%3E");
 }
 	
-</style></head><body><article id="12b43dd4-5ed1-4f14-9ed2-05a3a446b443" class="page sans"><header><img class="page-cover-image" src="Nedbank%20Product%20Design%200406ff1d99d840a485fa68aa78238b1e/bg-imagery.jpeg" style="object-position:center 93.71000000000001%"/><div class="page-header-icon page-header-icon-with-cover"><img class="icon" src="Nedbank%20Product%20Design%200406ff1d99d840a485fa68aa78238b1e/logo-white.svg"/></div><h1 class="page-title">Nedbank Product Design</h1></header><div class="page-body"><p id="e85c9eb2-697c-4e87-98c0-c3f299eaef79" class="">RINBBM - Radically Improved Nedbank Business Banking Maintenance</p><p id="70e877c2-77a8-4a4a-8f16-a64ce9863e8d" class="">
+</style></head><body>
+    <a style="position: absolute; top: 32px; left: 32px; z-index: 10; text-decoration: none" href="/projects/archive">
+        <img alt="Back" loading="lazy" width="40" height="40" decoding="async" data-nimg="1" src="/images/icons/home.svg" style="color: transparent;">
+    </a>
+	
+	<article id="12b43dd4-5ed1-4f14-9ed2-05a3a446b443" class="page sans"><header><img class="page-cover-image" src="Nedbank%20Product%20Design%200406ff1d99d840a485fa68aa78238b1e/bg-imagery.jpeg" style="object-position:center 93.71000000000001%"/><div class="page-header-icon page-header-icon-with-cover"><img class="icon" src="Nedbank%20Product%20Design%200406ff1d99d840a485fa68aa78238b1e/logo-white.svg"/></div><h1 class="page-title">Nedbank Product Design</h1></header><div class="page-body"><p id="e85c9eb2-697c-4e87-98c0-c3f299eaef79" class="">RINBBM - Radically Improved Nedbank Business Banking Maintenance</p><p id="70e877c2-77a8-4a4a-8f16-a64ce9863e8d" class="">
 </p><hr id="96f37ffa-036d-4f89-b06f-97eb1dff4077"/><h3 id="55395ae3-fbd0-4d51-a865-6839b785c3b8" class="">August 2018 – November 2019</h3><p id="73db9d81-a3d8-488d-9329-29b0cf3d5e5a" class="block-color-gray">Ongoing project</p><p id="997cca2c-e91e-46a5-a713-40b1a01d753d" class="">
 </p><h3 id="4ef3f0ce-f563-4448-baa0-65103a9e10a2" class=""><strong>Project Summary</strong></h3><p id="d8d594fb-3a05-4d26-bee3-f2069b2f2728" class="block-color-gray">The goal of this project was to create a platform for Nedbank Business Banking users to be able to view business accounts, set user permissions, make changes to accounts and maintain a business account/s online.
 
