--- a/public/CaseStudies/No Code Enrichments.html
+++ b/public/CaseStudies/No Code Enrichments.html
@@ -677,7 +677,12 @@ blockquote {
 	background-image: url("data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%2216%22%20height%3D%2216%22%20viewBox%3D%220%200%2016%2016%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%0A%3Crect%20x%3D%220.75%22%20y%3D%220.75%22%20width%3D%2214.5%22%20height%3D%2214.5%22%20fill%3D%22white%22%20stroke%3D%22%2336352F%22%20stroke-width%3D%221.5%22%2F%3E%0A%3C%2Fsvg%3E");
 }
 	
-</style></head><body><article id="6ede1d0c-546c-4c52-9f85-77f4d15df364" class="page sans"><header><img class="page-cover-image" src="No%20Code%20Enrichments%207622be966ec3408d87bd051187192d91/zoom-background-flow.png" style="object-position:center 99.33999999999999%"/><div class="page-header-icon page-header-icon-with-cover"><img class="icon" src="No%20Code%20Enrichments%207622be966ec3408d87bd051187192d91/logo.svg"/></div><h1 class="page-title"><strong>No Code Enrichments </strong></h1></header><div class="page-body"><p id="f8d23f01-2b7e-490a-969f-346fa3e1ffb7" class="block-color-gray">Enriching your data means transforming and tailoring the data according to your needs.
+</style></head><body>
+    <a style="position: absolute; top: 32px; left: 32px; z-index: 10; text-decoration: none" href="/projects/archive">
+        <img alt="Back" loading="lazy" width="40" height="40" decoding="async" data-nimg="1" src="/images/icons/home.svg" style="color: transparent;">
+    </a>
+	
+	<article id="6ede1d0c-546c-4c52-9f85-77f4d15df364" class="page sans"><header><img class="page-cover-image" src="No%20Code%20Enrichments%207622be966ec3408d87bd051187192d91/zoom-background-flow.png" style="object-position:center 99.33999999999999%"/><div class="page-header-icon page-header-icon-with-cover"><img class="icon" src="No%20Code%20Enrichments%207622be966ec3408d87bd051187192d91/logo.svg"/></div><h1 class="page-title"><strong>No Code Enrichments </strong></h1></header><div class="page-body"><p id="f8d23f01-2b7e-490a-969f-346fa3e1ffb7" class="block-color-gray">Enriching your data means transforming and tailoring the data according to your needs.
 An enrichment is a set of instructions that you specify for the product to transform your data.</p><p id="4df6b8c3-f16c-48ad-a391-35d9727c25e0" class="">
 </p><hr id="7e177aa7-7727-4089-8d8a-03321792ce3c"/><p id="e17e180d-af6c-4d22-9307-d0add0a77976" class="">
 </p><h3 id="4ae3faa2-98c4-45ed-8dfb-8024e5a80a74" class=""><strong>Adverity 2021 / Quarterly Shaping &amp; Building</strong></h3><p id="cb1c4209-8455-4596-a97c-13a152f8da06" class="block-color-gray">Building the Enrichments library is an ongoing project. A version is shaped and built on a quarterly basis</p><p id="168214eb-d675-4d72-9c8a-7121851c6058" class="">
