--- a/public/CaseStudies/portfolio-casestudy.html
+++ b/public/CaseStudies/portfolio-casestudy.html
@@ -28,6 +28,10 @@
 </head>
 
 <body>
+    <a style="position: absolute; top: 32px; left: 32px; z-index: 10; text-decoration: none" href="/projects/archive">
+        <img alt="Back" loading="lazy" width="40" height="40" decoding="async" data-nimg="1" src="/images/icons/home.svg" style="color: transparent;">
+    </a>
+
    
     <header id="header" class="nbr-header-section">
         <div class="container">
