--- a/public/CaseStudies/ValuticoRebrand.html
+++ b/public/CaseStudies/ValuticoRebrand.html
@@ -22,6 +22,11 @@
 </head>
 
 <body class="loaded">
+
+    <a style="position: absolute; top: 32px; left: 32px; z-index: 10; text-decoration: none" href="/projects/archive">
+        <img alt="Back" loading="lazy" width="40" height="40" decoding="async" data-nimg="1" src="/images/icons/home.svg" style="color: transparent;">
+    </a>
+
    
     
     <!-- Title Header -->
